--- a/src/Slowpoke.cabal
+++ b/src/Slowpoke.cabal
@@ -11,5 +11,5 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:
-  build-depends:       base >=4.4, gloss-raster >= 1.8.2.1, gloss, JuicyPixels >= 3.1.7, parsec >= 3.1.7
+  build-depends:       base >=4.4, gloss-raster >= 1.8.2.1, gloss, JuicyPixels >= 3.1.7, parsec >= 3.1.7, template-haskell, vector
   default-language:    Haskell2010
